--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Styled Navigation</title>
+    <title>ManManDeng</title>
 	<link rel="stylesheet" href="css-04-01.css">
 </head>
 <body>
