--- a/resp-04-01.html
+++ b/resp-04-01.html
@@ -113,7 +113,7 @@
 
     <footer>
       <hr/>
-      <button onclick="myFunction()">O</button>
+      <button onclick="myFunction()">Check</button>
       <p id="demo"></p>
       <script>
       function myFunction() {
